--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,10 +5,10 @@
 
 <div class="row top-p">
     <div class="col-md-6 profile-l">
- 		
+
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">brown smith</div>
+            <div class="text_content">Aquil Hussain</div>
             <div class="clear"></div>
         </div>
 
@@ -17,42 +17,42 @@
             <li>
                 <i class="glyphicon glyphicon-user"></i>
                 <label>Name</label>
-                <span class="value">Brown Smith</span>
+                <span class="value">Aquil Hussain</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-calendar"></i>
                 <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
+                <span class="value">January 25, 1997</span>
                 <div class="clear"></div>
             </li>
 
-            <li> 
+            <li>
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Sikkim , India</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">aquilhussain15@gmail.com</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+123 (21) 1234-5678</span>
+                <span class="value">+91 7872668576</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
-                <span class="value"><a href="#" target="_blank">sc.chinaz.com</a></span>
+                <span class="value"><a href="https://serene-anchorage-42667.herokuapp.com/" target="_blank">Emergency App</a></span>
                 <div class="clear"></div>
             </li>
 
@@ -60,13 +60,13 @@
 
 
         <p style="margin-bottom:20px">
-            <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
+            <i class="fa fa-quote-left"></i>
+            Write your objective
         </p>
-        
+
          <p style="margin-bottom:20px">
-            <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
+            <i class="fa fa-quote-left"></i>
+            write something cool
 
         </p>
 
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-     </div> 
+     </div>
 </div><!-- End Services -->
 
 
