--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -1,7 +1,7 @@
 <!-- .resume -->
 <div id="resume" class="content_2">
     <!-- .title -->
-<h1 class="h-bloc">Resume - Personal Info</h1> 
+<h1 class="h-bloc">Resume - Personal Info</h1>
 
 <div class="row">
 
@@ -10,97 +10,149 @@
 
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Designs skills</div>
+            <div class="text_content">OS skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="95%">
-                <div class="skillbar-title"><span>Photoshop</span></div>
+                <div class="skillbar-title"><span>Windows</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
-    
+
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>Illustrateur</span></div>
+                <div class="skillbar-title"><span>Ubuntu</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
+                <div class="skill-bar-percent">70%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="65%">
-                <div class="skillbar-title"><span>Indesign</span></div>
+                <div class="skillbar-title"><span>Android</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">65%</div>
+                <div class="skill-bar-percent">80%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="35%">
-                <div class="skillbar-title"><span>Flash</span></div>
+                <div class="skillbar-title"><span>IOS</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">35%</div>
             </div>
             <!-- /.skillbar -->
         </div>
-        
-        
+
+
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Programming Skills</div>
+            <div class="text_content">Programming and other Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>Wordpress</span></div>
+                <div class="skillbar-title"><span>Java</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Joomla</span></div>
+                <div class="skillbar-title"><span>Python</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">75%</div>
+                <div class="skill-bar-percent">50%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Drupal</span></div>
+                <div class="skillbar-title"><span>Android</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
-            
+
              <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="89%">
-                <div class="skillbar-title"><span>Php</span></div>
+                <div class="skillbar-title"><span>Ruby on Rails</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">89%</div>
+                <div class="skill-bar-percent">40%</div>
             </div>
-            <!-- /.skillbar --> 
+            <!-- /.skillbar -->
+
+            <!-- .skillbar -->
+           <div class="skillbar clearfix" data-percent="89%">
+               <div class="skillbar-title"><span>C language</span></div>
+               <div class="skillbar-bar"></div>
+               <div class="skill-bar-percent">60%</div>
+           </div>
+           <!-- /.skillbar -->
+
+           <!-- .skillbar -->
+          <div class="skillbar clearfix" data-percent="89%">
+              <div class="skillbar-title"><span>Git</span></div>
+              <div class="skillbar-bar"></div>
+              <div class="skill-bar-percent">40%</div>
+          </div>
+          <!-- /.skillbar -->
+
+          <!-- .skillbar -->
+         <div class="skillbar clearfix" data-percent="89%">
+             <div class="skillbar-title"><span>Data Structures & Algorithms</span></div>
+             <div class="skillbar-bar"></div>
+             <div class="skill-bar-percent">70%</div>
+         </div>
+         <!-- /.skillbar -->
+
+         <!-- .skillbar -->
+        <div class="skillbar clearfix" data-percent="89%">
+            <div class="skillbar-title"><span>Docker</span></div>
+            <div class="skillbar-bar"></div>
+            <div class="skill-bar-percent">30%</div>
         </div>
-        
-         
+        <!-- /.skillbar -->
+
+        <!-- .skillbar -->
+       <div class="skillbar clearfix" data-percent="89%">
+           <div class="skillbar-title"><span>Machine Learning</span></div>
+           <div class="skillbar-bar"></div>
+           <div class="skill-bar-percent">30%</div>
+       </div>
+       <!-- /.skillbar -->
+
+       <!-- .skillbar -->
+      <div class="skillbar clearfix" data-percent="89%">
+          <div class="skillbar-title"><span>Web Development(HTML, CSS, JS)</span></div>
+          <div class="skillbar-bar"></div>
+          <div class="skill-bar-percent">60%</div>
+      </div>
+      <!-- /.skillbar -->
+
+
+
+
+        </div>
+
+
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
             <div class="text_content">Office Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-            
-        <div class="skills">       
+
+        <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="85%">
                 <div class="skillbar-title"><span>MS Excel</span></div>
@@ -108,7 +160,7 @@
                 <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="95%">
                 <div class="skillbar-title"><span>MS Word</span></div>
@@ -116,7 +168,7 @@
                 <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="60%">
                 <div class="skillbar-title"><span>Powerpoint</span></div>
@@ -124,24 +176,24 @@
                 <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="40%">
                 <div class="skillbar-title"><span>SharePoint</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">40%</div>
             </div>
-            <!-- /.skillbar -->   
+            <!-- /.skillbar -->
 		</div>
-        
-        
+
+
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
             <div class="text_content">Hobbies Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="60%">
@@ -150,23 +202,23 @@
                 <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>Sport</span></div>
+                <div class="skillbar-title"><span>Gymnasium</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Reading</span></div>
+                <div class="skillbar-title"><span>Gaming/Internet surfing</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
+                <div class="skill-bar-percent">99%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="70%">
                 <div class="skillbar-title"><span>Travelling</span></div>
@@ -175,15 +227,15 @@
             </div>
             <!-- /.skillbar -->
         </div>
-        
-        
+
+
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
             <div class="text_content">Language Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="90%">
@@ -192,23 +244,23 @@
                 <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="80%">
-                <div class="skillbar-title"><span>French</span></div>
+                <div class="skillbar-title"><span>Hindi</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">80%</div>
+                <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="50%">
-                <div class="skillbar-title"><span>Spanish</span></div>
+                <div class="skillbar-title"><span>Nepali</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">50%</div>
+                <div class="skill-bar-percent">70%</div>
             </div>
             <!-- /.skillbar -->
-            
+
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="60%">
                 <div class="skillbar-title"><span>Swiss</span></div>
@@ -217,15 +269,15 @@
             </div>
             <!-- /.skillbar -->
         </div>
-        
-        
+
+
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
             <div class="text_content">My Resume</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <!-- .download_resume -->
         <a class="download" style="margin:0;float: left;" href="#">
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
@@ -234,66 +286,66 @@
 
     </div>
      <!-- /.resume-right -->
-     
-     
-     
+
+
+
      <!-- .resume-left -->
-    <div class="col-md-6 resume-left">    
+    <div class="col-md-6 resume-left">
         <!-- .title_content -->
         <div class="title_content" style="margin-bottom:5px">
             <div class="text_content">Experience</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Web Developer <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Machine Learning(Internship) <span class="duration"><i class="fa fa-calendar color"></i> 2018 - 2018</span></h5>
+                <h6><span class="fa fa-briefcase"></span> IIT Bombay</h6>
+                <p>Define you work here.</p>
             </li>
             <li>
-                <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Web Development(Project) <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
+                <h6><span class="fa fa-briefcase"></span>Self work</h6>
+                <p>define them</p>
             </li>
 
         </ul>
         <!-- /.attributes -->
         <br>
-        
+
         <!-- .title_content -->
         <div class="title_content">
             <div class="text_content">Education</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Btech <span class="duration"><i class="fa fa-calendar color"></i> 2015 - 2019</span></h5>
+                <h6><span class="fa fa-book"></span> NIT Sikkim</h6>
+                <p>Currently undergrad(4th year) CGPA(7.74)</p>
             </li>
             <li>
-                <h5>Bachelor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>High School <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2015</span></h5>
+                <h6><span class="fa fa-book"></span> Sir TNSSS</h6>
+                <p>CBSE Board, PCM(83% )</p>
             </li>
         </ul>
         <!-- /.attributes -->
-        <br>  
-        
-        
+        <br>
+
+
           <!-- .title_content -->
         <div class="title_content">
             <div class="text_content">Awards</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
@@ -306,31 +358,31 @@
                 <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
                 <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
             </li>
-  
+
         </ul>
         <!-- /.attributes -->
-        <br>  
-        
+        <br>
+
     </div>
     <!-- /.resume-left -->
 </div>
 
-<div style="clear: both"></div>  
-  
-  
+<div style="clear: both"></div>
+
+
 <!-- client reference -->
 <div class="row">
-<div class="col-md-12">   
-    
-<div class="reference clearfix"> 
-            
+<div class="col-md-12">
+
+<div class="reference clearfix">
+
          <!-- .title_content -->
         <div class="title_content" style="margin-bottom:5px">
             <div class="text_content">Client reference</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
-        
+
 
         <ul>
             <li class="clearfix">
@@ -352,8 +404,8 @@
 </div>
 </div>
 
-     
-<div style="clear: both"></div>   
+
+<div style="clear: both"></div>
 </div>
 
 </div>
