--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -61,7 +61,10 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>
-            Write your objective
+            I want to become one of the most reputed and ethical professional of the organization I work for, and grow
+manifold along with the organization. I seek to optimally utilize my skills to the maximum in achieving
+the long-term goals of the organization while enhancing my own skills and reach the technical zenith of
+excellence.
         </p>
 
          <p style="margin-bottom:20px">
