--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -69,7 +69,7 @@ excellence.
 
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>
-            write something cool
+            Eat Sleep and code
 
         </p>
 
