--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -262,11 +262,13 @@
             <!-- /.skillbar -->
 
             <!-- .skillbar -->
+            <!--
             <div class="skillbar clearfix " data-percent="60%">
                 <div class="skillbar-title"><span>Swiss</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
+          -->
             <!-- /.skillbar -->
         </div>
 
@@ -340,13 +342,20 @@
 
 
           <!-- .title_content -->
+
+          <!--my  personal comment
+
         <div class="title_content">
             <div class="text_content">Awards</div>
             <div class="clear"></div>
-        </div>
+        </div> personal comment end -->
+
         <!-- /.title_content -->
 
         <!-- .attributes -->
+
+        <!-- personal comment
+
         <ul class="attributes">
             <li class="first">
                 <h5>Graphic &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2014</span></h5>
@@ -360,6 +369,9 @@
             </li>
 
         </ul>
+
+        peronal comment end -->
+
         <!-- /.attributes -->
         <br>
 
@@ -371,20 +383,24 @@
 
 
 <!-- client reference -->
+<!--
 <div class="row">
 <div class="col-md-12">
 
 <div class="reference clearfix">
+-->
 
          <!-- .title_content -->
+         <!--
         <div class="title_content" style="margin-bottom:5px">
             <div class="text_content">Client reference</div>
             <div class="clear"></div>
         </div>
+      -->
         <!-- /.title_content -->
 
 
-        <ul>
+        <!-- <ul>
             <li class="clearfix">
                 <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
                 <p>“Many desktop publishing packages and web page editors now use Lorem Ipsum as their default will model text, and a search for 'lorem ipsum' hope is uncover many web sites still”</p>
@@ -400,7 +416,7 @@
                 <p>“old colleague and now close friend, she is really sweet and helpfull packages and web page editors now use Lorem Ipsum as their default will model text”</p>
                 <span>Maria Callas, UX Designer</span>
             </li>
-        </ul>
+        </ul> -->
 </div>
 </div>
 
