--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -384,22 +384,22 @@
 
 <!-- client reference -->
 
-<div class="row">
+<!-- <div class="row">
 <div class="col-md-12">
 
-<div class="reference clearfix">
+<div class="reference clearfix"> -->
 
 
          <!-- .title_content -->
 
-        <div class="title_content" style="margin-bottom:5px">
+        <!-- <div class="title_content" style="margin-bottom:5px">
             <div class="text_content">Client reference</div>
             <div class="clear"></div>
-        </div>
+        </div> -->
 
         <!-- /.title_content -->
 
-
+<!--
         <ul>
             <li class="clearfix">
                 <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
@@ -416,13 +416,13 @@
                 <p>“old colleague and now close friend, she is really sweet and helpfull packages and web page editors now use Lorem Ipsum as their default will model text”</p>
                 <span>Maria Callas, UX Designer</span>
             </li>
-        </ul> 
+        </ul>
 </div>
 </div>
 
 
 <div style="clear: both"></div>
 </div>
-
+ -->
 </div>
 <!-- End .resume -->
