--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -345,10 +345,10 @@
 
 
 
-        <div class="title_content">
+        <!-- <div class="title_content">
             <div class="text_content">Awards</div>
             <div class="clear"></div>
-        </div>
+        </div> -->
 
         <!-- /.title_content -->
 
@@ -356,7 +356,7 @@
 
 
 
-        <ul class="attributes">
+        <!-- <ul class="attributes">
             <li class="first">
                 <h5>Graphic &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2014</span></h5>
                 <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
@@ -368,7 +368,7 @@
                 <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
             </li>
 
-        </ul>
+        </ul> -->
 
 
 
