--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -309,7 +309,7 @@
             </li>
             <li>
                 <h5>Web Development(Project) <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span>Self work</h6>
+                <h6><span class="fa fa-briefcase"></span>Self work &nbsp;&nbsp;<span class="value"><a href="https://serene-anchorage-42667.herokuapp.com/" target="_blank">(Emergency App)</a></span></h6>
                 <p>define them</p>
             </li>
 
