--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <!-- .contact -->
 <div id="contact" class="content_2">
-        
+
 <h1 class="h-bloc">Contact - Contact Me</h1>
 
 
@@ -8,7 +8,7 @@
 
     <div class="col-lg-12">
         <div id="map"></div>
-    </div>  
+    </div>
 
     <div class="col-lg-12">
         <div class="row" id="contact-user">
@@ -41,17 +41,18 @@
                     <div class="clear"></div>
                 </div>
 
-            
+
 
                     <div id="profile_social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/aquil.hussain.77"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-foursquare"></i></a>
+                        <a href="https://www.linkedin.com/in/aquil-hussain-191069109/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.github.com/aquilll" target="_blank"><i class="fa fa-github"></i></a>
+                        <!-- <a href="#"><i class="fa fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-foursquare"></i></a> -->
                         <div class="clear"></div>
                     </div>
-      
+
 
 
             </div>
@@ -75,7 +76,7 @@
                             <label for="name">Your Name</label>
                             <input type="text" name="name" class="form-control name-contact" id="inputSuccess" placeholder="Name..." />
                         </p>
-                        <p class="form-group" id="contact-email"> 
+                        <p class="form-group" id="contact-email">
                             <label for="email">Your Email</label>
                             <input type="text" name="email" class="form-control email-contact" id="inputSuccess" placeholder="Email..." />
                         </p>
@@ -96,8 +97,8 @@
                 <!-- /Contact Form -->
             </div>
         </div>
-    </div>  
+    </div>
 
-</div>                                            
+</div>
 </div>
     <!-- End .contact -->
